yaml/monitoring/04-grafana/grafana/templates/05-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - grafana.mykloud.andikaahmad.com
      secretName: letsencrypt-prod-grafana
  rules:
  - host: grafana.mykloud.andikaahmad.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
